# pos-decorate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/pos_decorate/: cli.py  formatter.py  tokenizer.py
tests/: conftest.py  test_parse_tree.py  test_parse_tree.test_comprehensive_coverage.approved.txt  test_parse_tree.test_roses_are_red.approved.txt  test_position.py
