[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pos-decorate"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "nltk>=3.8",
]

[project.optional-dependencies]
test = [
    "pytest",
    "approvaltests",
]

[project.scripts]
pos-decorate = "pos_decorate.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
